custom/templates/DefaultRevamp/css/custom.css
/* ... */
.badge-secondary {
    color: #fff;
    background-color: #6c757d;
}

a.badge-secondary:hover,
a.badge-secondary:focus {
    color: #fff;
    background-color: #545b62;
}

.badge-success {
    color: #fff;
    background-color: #28a745;
}

a.badge-success:hover,
a.badge-success:focus {
    color: #fff;
    background-color: #1e7e34;
}

.badge-info {
    color: #fff;
    background-color: #17a2b8;
}

a.badge-info:hover,
a.badge-info:focus {
    color: #fff;
    background-color: #117a8b;
}

.badge-warning {
    color: #212529;
    background-color: #ffc107;
}

a.badge-warning:hover,
a.badge-warning:focus {
    color: #212529;
    background-color: #d39e00;
}

.badge-danger {
    color: #fff;
    background-color: #dc3545;
}

a.badge-danger:hover,
a.badge-danger:focus {
    color: #fff;
    background-color: #bd2130;
}

.badge-light {
    color: #212529;
    background-color: #f8f9fa;
}

a.badge-light:hover,
a.badge-light:focus {
    color: #212529;
    background-color: #dae0e5;
}

.badge-dark {
    color: #fff;
    background-color: #343a40;
}

a.badge-dark:hover,
a.badge-dark:focus {
    color: #fff;
    background-color: #1d2124;
}

/*
   *  [ OTHER ]
   */

select {
    font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
    font-size: 0.9rem;
    padding: 10px !important;
}

.ui.popup {
    z-index: 99999;
    text-align: left;
}

.ui.popup .ui.header {
    margin: 0;
}

.ui.message {
    margin: 0.5em 0;
}

.tox-tinymce {
    min-height: 300px;
}

.forum_post {
    word-wrap: break-word;
}

.forum_post img {
    overflow: auto;
    max-width: 100%;
    height: auto;
}

.ui.checkbox .box:before,
.ui.checkbox label:before {
    margin-top: 4px;
}

.ui.checkbox input:checked~.box:after,
.ui.checkbox input:checked~label:after {
    margin-top: 4px;
}

.ui.header .topic.title .label,
.ui.header .topic.title .badge {
    margin-top: -4px;
    vertical-align: middle;
}

#ie-message {
    display: none;
}

@media all and (-ms-high-contrast: none),
(-ms-high-contrast: active) {
    #ie-message {
        display: initial;
    }
}

#darkmode {
    display: inline-block;
}

.darkmode-toggle {
    opacity: 0;
    position: absolute;
}

.darkmode-toggle:checked + .darkmode-toggle-label .darkmode-ball {
    transform: translateX(24px);
}

.darkmode-toggle-label {
    background-color: #111;
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-radius: 50px;
    position: relative;
    padding: 5px;
    height: 26px;
    width: 50px;
}

.darkmode-ball {
    background-color: #fff;
    border-radius: 50%;
    position: absolute;
    top: 2px;
    left: 2px;
    height: 22px;
    width: 22px;
    transition: transform 0.2s linear;
}

.fa-moon {
    color: #f1c400;
}

.fa-sun {
    color:#f39c00;
}

/*
   *  [ DARK MODE ]
   */

body.dark,
body.dark>.pusher,
body.dark .ui.pointing.dropdown>.menu:after {
    background: #222;
}

body.dark .ui.secondary.menu:not(.inverted) {
    background: #303030;
    color: #fff;
}

body.dark .ui.secondary.menu .item.active {
    color: #fff;
}

body.dark .ui.top.attached.menu:not(.inverted) {
    background: #282828;
    border: 1px solid #282828;
}

body.dark .ui.top.attached.menu:not(.inverted) .item {
    color: #fff;
}

body.dark .ui.form input:not(.button) {
    background-color: #303030 !important;
}

body.dark .ui.modal {
    background-color: #303030;
    border: none;
}

body.dark .ui.modal>.content {
    background-color: #303030;
    border: 1px solid rgba(0, 0, 0, 0.125);
    color: #fff;
    -webkit-box-shadow: none;
    box-shadow: none;
}

body.dark .ui.modal>.actions,
body.dark .ui.modal>.header {
    color: rgba(255, 255, 255, 0.6);
    background-color: #444;
    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
}

body.dark .ui.popup,
body.dark .ui.secondary.menu .ui.popup,
body.dark .ui.menu .dropdown.item .menu,
body.dark .ui.dropdown .menu {
    background-color: #222;
    border: 1px solid #444;
    color: rgba(255, 255, 255, 0.6);
}

body.dark .ui.button,
body.dark .ui.default.button,
body.dark .ui.mini.icon.button,
body.dark .ui.top.right.attached.label {
    background-color: #282828;
    color: rgba(255, 255, 255, 0.6);
}

body.dark .ui.button.red {
    background-color: #db2828;
    color: #fff;
}

body.dark .ui.image.label,
body.dark .ui.selection.dropdown,
body.dark .ui.selection.visible.dropdown>.text:not(.default) {
    background-color: #282828;
    color: #fff;
}

body.dark .ui.selection.dropdown .ui.label {
    background-color: #303030;
    color: #fff;
}

body.dark .ui.form .ui.selection.dropdown input:not(.button) {
    background-color: #282828 !important;
}

body.dark .ui.form .field .ui.selection.active.dropdown .menu {
    border: 1px solid #282828;
}

body.dark .ui.form .field .ui.dropdown .menu .item {
    background-color: #282828;
    border-top: 1px solid #303030;
    color: #fff;
}

body.dark .ui.card,
body.dark .ui.segment,
body.dark .ui.vertical.menu {
    background-color: #303030;
    border: 1px solid rgba(0, 0, 0, 0.125);
    -webkit-box-shadow: none;
    box-shadow: none;
}

body.dark .ui.segment#profile-header {
    border: none;
}

body.dark .ui.attached.tabular.menu {
    border-bottom: none;
}

body.dark .ui.attached.tabular.menu .item.active {
    background-color: #303030;
    border-color: transparent;
}

body.dark .ui.card .content.header {
    background-color: #444;
    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
}
/* ... */

